contrast correction & alt correction

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -62,7 +62,7 @@ $yiq-contrasted-threshold: 250 !default;
 
 // Body
 
-$body-color:                $gray-600 !default;
+$body-color:                $gray-700 !default;
 
 // Components
 
